Bug 1693411: Make sure an a11y node is removed when visibility: hidden is set but the layout frame is reconstructed; e.g. position: fixed. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D105934